infra/k8s_documentatio/file_to_create_a_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl_name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: container_name
          image: image_repository

## Change the posts to the name we need
