infra/k8s_documentatio/file_to_create_a_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod_name 
spect:
  containers:
    - name: container_name
      image: image_repository
    
## Use always the latest tag image
