infra/k8s_documentatio/file_to_create_a_service.yml
apiVersion: v1
kind: Service
metadata:
  name: name-srv
spec:
  type: NodePort
  selector:
    app: name
  ports:
    - name: name
      protocol: TCP
      port: 4000
      targetPort: 4000

# (name 8:10) selector -> app -> name
# es el nombre del pod ya creado anteriormente en el deploy en la sección de labels -> app: name
# (port 12:7) Es el puerto del node
# (port 13:7) Es el puerto del pod
