infra/k8s_documentatio/filt_to_create_a_ingress_service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: resource.com
      http:
        paths:
          - path: /resource
            backend:
              serviceName: cluster-ip-service
              servicePort: PORT
## PORT: Number port exposed by the service
## cluster-ip-service: The service we want to point to
## hots: resource.com Just like the service name
## path: /resource : Just like the host but without .com
